fix overflow issue by removing clearfix mixin

--- a/app/assets/stylesheets/partials/_home.scss
+++ b/app/assets/stylesheets/partials/_home.scss
@@ -41,7 +41,7 @@ section.home {
 
   .hero-inner {
     @include outer-container;
-    @include clearfix;
+    // @include clearfix;
     padding: 1em;
     padding-top: 2em;
     @include media($medium-screen) {
